fix: header spacing, container padding.

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -34,7 +34,7 @@
         flex-direction: column;
         align-items: start;
         justify-content: center;
-        gap: 1rem;
+        gap: 1.25rem;
     }
 
     header nav ul li.menu {
@@ -56,7 +56,7 @@
 
     section.case-banner .case-informations {
         flex-direction: column;
-        padding: 2rem 1rem;
+        padding: 2rem 1rem 0px 1rem;
         gap: 0rem;
     }
 
@@ -97,6 +97,6 @@
     }
 
     .image-same-height {
-        height: 578px;
+        height: auto;
     }
 }
